# Cb

./: .gitignore  CMakeLists.txt  README.md
Composer/: composer.sln
Transposer/: .gitignore  CMakeLists.txt  FileManager.cpp  FileManager.h  Source.cpp  Statement.h  Test.cpp  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Transposer.sln  Transposer.vcxproj  Transposer.vcxproj.filters
Transposer/AST/: Statements.h
Transposer/AST/Stmt/: Constant_Value_Stmt.cpp  Constant_Value_Stmt.h
Transposer/AST/abstract/: Call.h  Expression.h  Statement.h
Transposer/AST/expression/: ConstValueExpr.cpp  ConstValueExpr.h
Transposer/AST/other/: Type.cpp  Type.h
Transposer/AST/statements/: ArrayDeclStmt.cpp  ArrayDeclStmt.h  AssignmentStmt.cpp  AssignmentStmt.h  BodyStmt.cpp  BodyStmt.h  BreakStmt.cpp  BreakStmt.h  CaseStmt.cpp  CaseStmt.h  ContinueStmt.cpp  ContinueStmt.h  ElseIfStmt.cpp  ElseIfStmt.h  ElseStmt.cpp  ElseStmt.h  ForStmt.cpp  ForStmt.h  FuncCreditStmt.cpp  FuncCreditStmt.h  FuncDecStmt.cpp  FuncDecStmt.h  FuncDeclStmt.cpp  FuncDeclStmt.h  HearStmt.cpp  HearStmt.h  IfStmt.cpp  IfStmt.h  IncludeStmt.cpp  IncludeStmt.h  PlayStmt.cpp  PlayStmt.h  ReturnStmt.cpp  ReturnStmt.h  SwitchStmt.cpp  SwitchStmt.h  VarDecStmt.cpp  VarDecStmt.h  VarDeclStmt.cpp  VarDeclStmt.h  (+2 more)
Transposer/AST/statements/expression/: ArrayIndexingExpr.cpp  ArrayIndexingExpr.h  ArraySlicingExpr.cpp  ArraySlicingExpr.h  BinaryOpExpr.cpp  BinaryOpExpr.h  ConstValueExpr.cpp  ConstValueExpr.h  FuncCallExpr.cpp  FuncCallExpr.h  UnaryOpExpr.cpp  UnaryOpExpr.h  UnaryOperatorExpr.cpp  UnaryOperatorExpr.h  VarCallExpr.cpp  VarCallExpr.h
Transposer/Boost/libs/: libboost_regex-vc143-mt-s-x64-1_89.lib
Transposer/ObjFiles/: Array.h  Array.tpp  CMakeLists.txt  Object.cpp  Object.h  Primitive.h  Primitive.tpp  SafePtr.h  SafePtr.tpp  String.cpp  String.h  Utils.h  Utils.tpp  main.cpp
Transposer/Transposer/: Source.cpp
Transposer/Transposer/LSPPacking/: LSPPacker.cpp  LSPPacker.h
Transposer/Transposer/class/: AccessType.h  ClassNode.cpp  ClassNode.h  ClassTree.cpp  ClassTree.h
Transposer/Transposer/errorHandling/: Error.cpp  Error.h
Transposer/Transposer/files/: File.cpp  File.h  FileGraph.cpp  FileGraph.h  FileNode.cpp  FileNode.h  LibHelper.cpp  LibHelper.h
Transposer/Transposer/multyOSSupport/: CMDFactory.cpp  CMDFactory.h  UnixCMD.h
Transposer/Transposer/other/: Scope.cpp  Scope.h  SymbolTable.cpp  SymbolTable.h  Utils.cpp  Utils.h
Transposer/Transposer/parser/: ExprParser.cpp  ExprParser.h  FQN.h  Parser.cpp  Parser.h  ParserContext.cpp  ParserContext.h  Parser_org.cpp  StmtParser.cpp  StmtParser.h  TypeParser.cpp  TypeParser.h
Transposer/Transposer/symbols/: Class.cpp  Class.h  Constractor.cpp  Constractor.h  Func.cpp  Func.h  FuncCredit.cpp  FuncCredit.h  Var.cpp  Var.h
Transposer/Transposer/token/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Transposer/errorHandling/: Error.cpp  Error.h  ErrorHandler.h
Transposer/errorHandling/entryPointErrors/: InvalidMainArgs.cpp  MainOverride.cpp
Transposer/errorHandling/errorTypes/: MissingSemicolon.h  UnrecognizedIdentifier.h  UnrecognizedToken.cpp
Transposer/errorHandling/how/: HowDidYouGetHere.cpp  HowDidYouGetHere.h
Transposer/errorHandling/lexicalErrors/: IdentifierTaken.cpp  IdentifierTaken.h  InvalidCharacterEncoding.cpp  InvalidCharacterEncoding.h  InvalidEscapeSequence.cpp  InvalidEscapeSequence.h  InvalidIdentifier.cpp  InvalidIdentifier.h  InvalidMainArgs.h  InvalidMainReturnType.cpp  InvalidMainReturnType.h  InvalidNumberLiteral.cpp  InvalidNumberLiteral.h  MainOverride.h  NoMain.cpp  NoMain.h  UnexpectedEOF.cpp  UnexpectedEOF.h  UnidentifiedToken.cpp  UnidentifiedToken.h  UnrecognizedToken.h  UnterminatedString.cpp  UnterminatedString.h
Transposer/errorHandling/preproccessorErrors/: CircularDependency.cpp  CircularDependency.h  CouldntOpenFileForWriting.cpp  IncludePathNotFound.h
Transposer/errorHandling/semanticErrors/: CallWithoutCopyright.cpp  FuncInsideFunc.cpp  IllegalCaseVar.cpp  IllegalCaseVar.h  IllegalCredit.cpp  IllegalHear.cpp  IllegalOpOnType.cpp  IllegalOpOnType.h  IllegalSwitchVar.cpp  IllegalTypeCast.cpp  IllegalTypeCast.h  InvalidPathExtension.cpp  InvalidPathExtension.h  NoReturn.h  NoReturnStmt.cpp  StmtNotBreakable.h  StmtNotContinueAble.h  WrongReturnType.h
Transposer/errorHandling/syntaxErrors/: ElseIfWithoutIf.cpp  ElseIfWithoutIf.h  ElseWithoutIf.cpp  ElseWithoutIf.h  ExpectedAPath.cpp  ExpectedAnExpression.cpp  ExpectedAnExpression.h  InvalidExpression.cpp  InvalidExpression.h  InvalidStatement.cpp  InvalidStatement.h  MisplacedKeyword.cpp  MisplacedKeyword.h  MissingBrace.cpp  MissingBrace.h  MissingIdentifier.cpp  MissingIdentifier.h  MissingParenthesis.cpp  MissingParenthesis.h  MissingPipe.cpp  MissingSemicolon.cpp  MissingSemicolon.h  NoReturnStmt.cpp  NoReturnStmt.h  UnexpectedToken.cpp  UnexpectedToken.h
Transposer/files/: ArrayHelper.cpp  ArrayHelper.h  File.cpp  File.h  FileGraph.cpp  FileGraph.h  FileManager.cpp  FileManager.h  FileNode.cpp  FileNode.h
Transposer/multyOSSupport/: CMD.h  CMDFactory.cpp  LinuxCMD.cpp  LinuxCMD.h  TypeCMD.h  UnixCMD.cpp  WindowsCMD.cpp  WindowsCMD.h
Transposer/other/: Scope.cpp  Scope.h  SymbolTable.cpp  SymbolTable.h  Type.cpp  Type.h  Utils.cpp  Utils.h  Var.cpp  Var.h
Transposer/parser/: Parser.cpp  Parser.h  parser.cpp  parser.h
Transposer/symbols/: Func.cpp  Func.h  FuncCall.cpp  FuncCall.h  FuncCredit.cpp  FuncCredit.h  Type.h  Var.cpp
Transposer/symbols/Type/: ArrayType.cpp  IType.h  Type.cpp  Type.h
Transposer/test files/: pascal.cb  pascal.cpp  test  test.cb
Transposer/test files/ClassTest1/: class.cb  class.cpp  class.h  class2.cb  main  main.cb  main.cpp
Transposer/test files/ClassesTest1/: class.cb
Transposer/test files/Demo/: Animal.cb  Cat.cb  Dog.cb  Snake.cb  Zoo.cb  main.cb
Transposer/test files/MultiFilesTests/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  D.cb  D.cpp  D.h  main  main.cb  main.cpp
Transposer/test files/Pascal/: pascal  pascal.cb  pascal.cpp
Transposer/token/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
(+274 files in other folders)
