cmake_minimum_required(VERSION 4.0)

# In Windows:
# Follow step 1: https://learn.microsoft.com/en-us/vcpkg/get_started/get-started?pivots=shell-powershell#1---set-up-vcpkg
# INSTALL DIRECTLY TO C:/.
if (WIN32)
    set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
    set(CMAKE_PREFIX_PATH "C:/vcpkg/installed/x64-windows/share")
endif()

project(Transposer CXX)

set(CMAKE_CXX_STANDARD 20)

include_directories(Transposer)

add_executable(Transposer
        Transposer/Source.cpp
        Transposer/token/Token.cpp
        Transposer/token/Token.h
        Transposer/token/Tokenizer.cpp
        Transposer/token/Tokenizer.h
        Transposer/AST/abstract/Statement.h
        Transposer/errorHandling/Error.cpp
        Transposer/errorHandling/Error.h
        Transposer/errorHandling/lexicalErrors/UnexpectedEOF.cpp
        Transposer/errorHandling/lexicalErrors/UnexpectedEOF.h
        Transposer/errorHandling/syntaxErrors/MissingSemicolon.cpp
        Transposer/errorHandling/syntaxErrors/MissingSemicolon.h
        Transposer/errorHandling/syntaxErrors/MissingParenthesis.cpp
        Transposer/errorHandling/syntaxErrors/MissingParenthesis.h
        Transposer/errorHandling/syntaxErrors/MissingBrace.cpp
        Transposer/errorHandling/syntaxErrors/MissingBrace.h
        Transposer/errorHandling/syntaxErrors/UnexpectedToken.cpp
        Transposer/errorHandling/syntaxErrors/UnexpectedToken.h
        Transposer/errorHandling/syntaxErrors/InvalidExpression.cpp
        Transposer/errorHandling/syntaxErrors/InvalidExpression.h
        Transposer/errorHandling/syntaxErrors/MissingIdentifier.cpp
        Transposer/errorHandling/syntaxErrors/MissingIdentifier.h
        Transposer/parser/Parser_org.cpp
        Transposer/parser/Parser.h
        Transposer/symbols/Type/PrimitiveType.cpp
        Transposer/symbols/Type/PrimitiveType.h
        Transposer/AST/abstract/Expression.h
        Transposer/AST/statements/expression/ConstValueExpr.cpp
        Transposer/AST/statements/expression/ConstValueExpr.h
        Transposer/other/SymbolTable.cpp
        Transposer/other/SymbolTable.h
        Transposer/other/Scope.cpp
        Transposer/other/Scope.h
        Transposer/symbols/Var.cpp
        Transposer/symbols/Var.h
        Transposer/errorHandling/semanticErrors/IdentifierTaken.cpp
        Transposer/errorHandling/semanticErrors/IdentifierTaken.h
        Transposer/other/Utils.cpp
        Transposer/other/Utils.h
        Transposer/AST/statements/VarDeclStmt.cpp
        Transposer/AST/statements/VarDeclStmt.h
        Transposer/AST/statements/AssignmentStmt.cpp
        Transposer/AST/statements/AssignmentStmt.h
        Transposer/AST/statements/expression/VarCallExpr.cpp
        Transposer/AST/statements/expression/VarCallExpr.h
        Transposer/AST/statements/expression/BinaryOpExpr.cpp
        Transposer/AST/statements/expression/BinaryOpExpr.h
        Transposer/AST/statements/HearStmt.cpp
        Transposer/AST/statements/HearStmt.h
        Transposer/AST/statements/expression/UnaryOpExpr.cpp
        Transposer/AST/statements/expression/UnaryOpExpr.h
        Transposer/AST/statements/PlayStmt.cpp
        Transposer/AST/statements/PlayStmt.h
        Transposer/symbols/Func.cpp
        Transposer/symbols/Func.h
        Transposer/AST/statements/BodyStmt.cpp
        Transposer/AST/statements/BodyStmt.h
        Transposer/AST/statements/FuncDeclStmt.cpp
        Transposer/AST/statements/FuncDeclStmt.h
        Transposer/AST/statements/ReturnStmt.cpp
        Transposer/AST/statements/ReturnStmt.h
        Transposer/errorHandling/semanticErrors/WrongReturnType.cpp
        Transposer/errorHandling/semanticErrors/WrongReturnType.h
        Transposer/errorHandling/semanticErrors/NoReturnStmt.cpp
        Transposer/errorHandling/semanticErrors/NoReturn.h
        Transposer/errorHandling/entryPointErrors/MainOverride.cpp
        Transposer/errorHandling/entryPointErrors/MainOverride.h
        Transposer/errorHandling/entryPointErrors/NoMain.cpp
        Transposer/errorHandling/entryPointErrors/NoMain.h
        Transposer/errorHandling/entryPointErrors/InvalidMainArgs.cpp
        Transposer/errorHandling/entryPointErrors/InvalidMainArgs.h
        Transposer/errorHandling/entryPointErrors/InvalidMainReturnType.cpp
        Transposer/errorHandling/entryPointErrors/InvalidMainReturnType.h
        Transposer/symbols/FuncCredit.cpp
        Transposer/symbols/FuncCredit.h
        Transposer/AST/statements/FuncCreditStmt.cpp
        Transposer/AST/statements/FuncCreditStmt.h
        Transposer/AST/statements/expression/FuncCallExpr.cpp
        Transposer/AST/statements/expression/FuncCallExpr.h
        Transposer/symbols/Type/IType.h
        Transposer/AST/statements/IfStmt.cpp
        Transposer/AST/statements/IfStmt.h
        Transposer/errorHandling/syntaxErrors/ElseWithoutIf.cpp
        Transposer/errorHandling/syntaxErrors/ElseWithoutIf.h
        Transposer/AST/statements/ArrayDeclStmt.cpp
        Transposer/AST/statements/ArrayDeclStmt.h
        Transposer/symbols/Type/ArrayType.cpp
        Transposer/symbols/Type/ArrayType.h
        Transposer/AST/statements/WhileStmt.cpp
        Transposer/AST/statements/WhileStmt.h
        Transposer/AST/statements/BreakStmt.cpp
        Transposer/AST/statements/BreakStmt.h
        Transposer/AST/statements/expression/ArraySlicingExpr.cpp
        Transposer/AST/statements/expression/ArraySlicingExpr.h
        Transposer/AST/statements/expression/ArrayIndexingExpr.cpp
        Transposer/AST/statements/expression/ArrayIndexingExpr.h
        Transposer/AST/abstract/VarReference.h
        Transposer/AST/statements/SwitchStmt.cpp
        Transposer/AST/statements/SwitchStmt.h
        Transposer/AST/statements/CaseStmt.cpp
        Transposer/AST/statements/CaseStmt.h
        Transposer/AST/statements/ContinueStmt.cpp
        Transposer/AST/statements/ContinueStmt.h
        Transposer/AST/statements/ForStmt.cpp
        Transposer/AST/statements/ForStmt.h
        Transposer/errorHandling/how/HowDidYouGetHere.cpp
        Transposer/errorHandling/how/HowDidYouGetHere.h
        Transposer/errorHandling/semanticErrors/StmtNotBreakable.cpp
        Transposer/errorHandling/semanticErrors/StmtNotBreakable.h
        Transposer/errorHandling/semanticErrors/StmtNotContinueAble.cpp
        Transposer/errorHandling/semanticErrors/StmtNotContinueAble.h
        Transposer/errorHandling/lexicalErrors/UnrecognizedToken.cpp
        Transposer/errorHandling/lexicalErrors/UnrecognizedToken.h
        Transposer/errorHandling/semanticErrors/UnrecognizedIdentifier.cpp
        Transposer/errorHandling/semanticErrors/UnrecognizedIdentifier.h
        Transposer/errorHandling/syntaxErrors/StmtInsideSwitchThatIsNotCase.cpp
        Transposer/errorHandling/syntaxErrors/StmtInsideSwitchThatIsNotCase.h
        Transposer/errorHandling/lexicalErrors/InvalidNumberLiteral.cpp
        Transposer/errorHandling/lexicalErrors/InvalidNumberLiteral.h
        Transposer/errorHandling/syntaxErrors/NoPlacementOperator.cpp
        Transposer/errorHandling/syntaxErrors/NoPlacementOperator.h
        Transposer/errorHandling/syntaxErrors/ExpectedAnExpression.cpp
        Transposer/errorHandling/syntaxErrors/ExpectedAnExpression.h
        Transposer/errorHandling/syntaxErrors/MissingPipe.cpp
        Transposer/errorHandling/syntaxErrors/MissingPipe.h
        Transposer/errorHandling/semanticErrors/IllegalTypeCast.cpp
        Transposer/errorHandling/semanticErrors/IllegalTypeCast.h
        Transposer/errorHandling/semanticErrors/IllegalSwitchVar.cpp
        Transposer/errorHandling/semanticErrors/IllegalSwitchVar.h
        Transposer/errorHandling/semanticErrors/IllegalHear.cpp
        Transposer/errorHandling/semanticErrors/IllegalHear.h
        Transposer/errorHandling/semanticErrors/FuncInsideFunc.cpp
        Transposer/errorHandling/semanticErrors/FuncInsideFunc.h
        Transposer/errorHandling/semanticErrors/IllegalOpOnType.cpp
        Transposer/errorHandling/semanticErrors/IllegalOpOnType.h
        Transposer/errorHandling/semanticErrors/CallWithoutCopyright.cpp
        Transposer/errorHandling/semanticErrors/CallWithoutCopyright.h
        Transposer/errorHandling/semanticErrors/IllegalCredit.cpp
        Transposer/errorHandling/semanticErrors/IllegalCredit.h
        Transposer/errorHandling/semanticErrors/IllegalCall.cpp
        Transposer/errorHandling/semanticErrors/IllegalCall.h
        Transposer/AST/statements/IncludeStmt.cpp
        Transposer/AST/statements/IncludeStmt.h
        Transposer/errorHandling/syntaxErrors/IncludeNotInTop.cpp
        Transposer/errorHandling/syntaxErrors/IncludeNotInTop.h
        Transposer/errorHandling/semanticErrors/InvalidPathExtension.cpp
        Transposer/errorHandling/semanticErrors/InvalidPathExtension.h
        Transposer/errorHandling/syntaxErrors/ExpectedAPath.cpp
        Transposer/errorHandling/syntaxErrors/ExpectedAPath.h
        Transposer/files/File.cpp
        Transposer/files/File.h
        Transposer/files/FileNode.cpp
        Transposer/files/FileNode.h
        Transposer/files/FileGraph.cpp
        Transposer/files/FileGraph.h
        Transposer/multyOSSupport/CMD.h
        Transposer/multyOSSupport/CMDFactory.cpp
        Transposer/multyOSSupport/CMDFactory.h
        Transposer/multyOSSupport/UnixCMD.cpp
        Transposer/multyOSSupport/UnixCMD.h
        Transposer/multyOSSupport/WindowsCMD.cpp
        Transposer/multyOSSupport/WindowsCMD.h
        Transposer/errorHandling/preproccessorErrors/IncludePathNotFound.cpp
        Transposer/errorHandling/preproccessorErrors/IncludePathNotFound.h
        Transposer/errorHandling/preproccessorErrors/CircularDependency.cpp
        Transposer/errorHandling/preproccessorErrors/CircularDependency.h
        Transposer/errorHandling/preproccessorErrors/CouldntOpenFile.cpp
        Transposer/errorHandling/preproccessorErrors/CouldntOpenFile.h
        Transposer/errorHandling/preproccessorErrors/CouldntOpenFileForWriting.cpp
        Transposer/errorHandling/preproccessorErrors/CouldntOpenFileForWriting.h
        Transposer/errorHandling/classErrors/IllegalFieldName.cpp
        Transposer/errorHandling/classErrors/IllegalFieldName.h
        Transposer/AST/statements/ClassDeclStmt.cpp
        Transposer/AST/statements/ClassDeclStmt.h
        Transposer/errorHandling/classErrors/MissingClassPipe.cpp
        Transposer/errorHandling/classErrors/MissingClassPipe.h
        Transposer/AST/statements/ConstructorDeclStmt.cpp
        Transposer/AST/statements/ConstructorDeclStmt.h
        Transposer/symbols/Class.cpp
        Transposer/symbols/Class.h
        Transposer/symbols/Constractor.cpp
        Transposer/symbols/Constractor.h
        Transposer/AST/abstract/IFuncDeclStmt.h
        Transposer/AST/statements/ObjCreationPolyStmt.cpp
        Transposer/AST/statements/ObjCreationPolyStmt.h
        Transposer/errorHandling/classErrors/NoCtor.cpp
        Transposer/errorHandling/classErrors/NoCtor.h
        Transposer/class/ClassNode.cpp
        Transposer/class/ClassNode.h
        Transposer/AST/statements/expression/DotOpExpr.cpp
        Transposer/AST/statements/expression/DotOpExpr.h
        Transposer/symbols/Type/ClassType.cpp
        Transposer/symbols/Type/ClassType.h
        Transposer/AST/statements/ConstractorCallStmt.cpp
        Transposer/AST/statements/ConstractorCallStmt.h
        Transposer/errorHandling/semanticErrors/IllegalVarName.cpp
        Transposer/errorHandling/semanticErrors/IllegalVarName.h
        Transposer/errorHandling/classErrors/AccessError.cpp
        Transposer/errorHandling/classErrors/AccessError.h
        Transposer/errorHandling/classErrors/InvalidCtorArgs.cpp
        Transposer/errorHandling/classErrors/InvalidCtorArgs.h
        Transposer/errorHandling/classErrors/RedefOfCtor.cpp
        Transposer/errorHandling/classErrors/RedefOfCtor.h
        Transposer/errorHandling/classErrors/ParentNotInitialized.cpp
        Transposer/errorHandling/classErrors/ParentNotInitialized.h
        Transposer/errorHandling/classErrors/ClassDosentExisit.cpp
        Transposer/errorHandling/classErrors/ClassDosentExisit.h
        Transposer/LSPPacking/LSPPacker.cpp
        Transposer/LSPPacking/LSPPacker.h
        Transposer/files/LibHelper.cpp
        Transposer/files/LibHelper.h
        Transposer/errorHandling/classErrors/InvalidAccessKeyword.cpp
        Transposer/errorHandling/classErrors/InvalidAccessKeyword.h
        Transposer/class/ClassTree.cpp
        Transposer/class/ClassTree.h
        Transposer/class/AccessType.h
        Transposer/errorHandling/classErrors/VirtualNonMethod.h
        Transposer/errorHandling/classErrors/VirtualNonMethod.cpp
        Transposer/errorHandling/classErrors/OverrideError.h
        Transposer/errorHandling/classErrors/OverrideError.cpp
        Transposer/errorHandling/classErrors/NoOverrideError.h
        Transposer/errorHandling/classErrors/NoOverrideError.cpp
        Transposer/errorHandling/classErrors/InvalidOverrideSignature.h
        Transposer/errorHandling/classErrors/InvalidOverrideSignature.cpp
        Transposer/errorHandling/classErrors/InstantiateAbstractClass.h
        Transposer/errorHandling/classErrors/InstantiateAbstractClass.cpp
        Transposer/errorHandling/classErrors/UnimplementedPureVirtualMethod.h
        Transposer/errorHandling/classErrors/UnimplementedPureVirtualMethod.cpp
        Transposer/errorHandling/syntaxErrors/ExpectedKeywordNotFound.cpp
        Transposer/errorHandling/syntaxErrors/ExpectedKeywordNotFound.h
        Transposer/errorHandling/semanticErrors/StaticFuncCantVirtual.cpp
        Transposer/errorHandling/semanticErrors/StaticFuncCantVirtual.h
        Transposer/AST/statements/expression/StaticDotOpExpr.cpp
        Transposer/AST/statements/expression/StaticDotOpExpr.h
        Transposer/errorHandling/classErrors/IllegalDotOpError.cpp
        Transposer/errorHandling/classErrors/IllegalDotOpError.h
        Transposer/token/TrieTree/TrieNode.cpp
        Transposer/token/TrieTree/TrieNode.h
        Transposer/token/TrieTree/KeywordInfo.h
        Transposer/token/TrieTree/WordBoundary.h
        Transposer/token/TrieTree/Keywords.cpp
        Transposer/token/TrieTree/Keywords.h
        Transposer/parser/Parser.cpp
        Transposer/parser/ParserContext.h
        Transposer/parser/ParserContext.cpp
        Transposer/parser/StmtParser.cpp
        Transposer/parser/StmtParser.h
        Transposer/parser/ExprParser.cpp
        Transposer/parser/ExprParser.h
        Transposer/parser/TypeParser.cpp
        Transposer/parser/TypeParser.h
        Transposer/errorHandling/syntaxErrors/NoLineOpener.cpp
        Transposer/errorHandling/syntaxErrors/NoLineOpener.h
        Transposer/errorHandling/how/HowDareYou.cpp
        Transposer/errorHandling/how/HowDareYou.h
        Transposer/errorHandling/syntaxErrors/NoNewLine.cpp
        Transposer/errorHandling/syntaxErrors/NoNewLine.h
        Transposer/errorHandling/syntaxErrors/NoRest.cpp
        Transposer/errorHandling/syntaxErrors/NoRest.h
        Transposer/errorHandling/classErrors/InvalidCtorName.cpp
        Transposer/errorHandling/classErrors/InvalidCtorName.h
        Transposer/errorHandling/classErrors/StaticCtor.cpp
        Transposer/errorHandling/classErrors/StaticCtor.h
        Transposer/errorHandling/classErrors/VirtualCtor.cpp
        Transposer/errorHandling/classErrors/VirtualCtor.h
        Transposer/parser/FQN.h
        Transposer/errorHandling/classErrors/CtorWithReturnValue.cpp
        Transposer/errorHandling/classErrors/CtorWithReturnValue.h
        Transposer/AST/statements/expression/CastCallExpr.cpp
        Transposer/AST/statements/expression/CastCallExpr.h
        Transposer/AST/statements/expression/IsExpr.cpp
        Transposer/AST/statements/expression/IsExpr.h
        Transposer/AST/statements/expression/LenExpr.cpp
        Transposer/AST/statements/expression/LenExpr.h
        Transposer/errorHandling/semanticErrors/IllegalLengthCall.cpp
        Transposer/errorHandling/semanticErrors/IllegalLengthCall.h
        Transposer/AST/statements/ObjCreationCastStmt.cpp
        Transposer/AST/statements/ObjCreationCastStmt.h
        Transposer/AST/abstract/ObjectCreationStmt.h
        Transposer/errorHandling/syntaxErrors/CaseNotInsideIf.cpp
        Transposer/errorHandling/syntaxErrors/CaseNotInsideIf.h
        Transposer/errorHandling/classErrors/PureWithBody.cpp
        Transposer/errorHandling/classErrors/PureWithBody.h
        Transposer/AST/statements/ObjCreationAssigmentStmt.cpp
        Transposer/AST/statements/ObjCreationAssigmentStmt.h

)

# In order to call the exe from the cmd
target_link_options(Transposer PRIVATE -static -static-libgcc -static-libstdc++)

include(FetchContent)


# Boost

find_package(Boost REQUIRED regex)
target_link_libraries(Transposer PRIVATE Boost::boost)